MNT: Re-rendered with conda-smithy 3.2.2.post.dev18 and pinning 2019.01.05

--- a/shippable.yml
+++ b/shippable.yml
@@ -11,6 +11,7 @@ env:
   matrix:
     - CONFIG=linux_aarch64_python2.7
     - CONFIG=linux_aarch64_python3.6
+    - CONFIG=linux_aarch64_python3.7
 
 
 build:
